<resources>
    <string name="app_name">ownbarbershop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textMenuOrder">Запись</string>
    <string name="textMenuProfile">Профиль</string>
    <string name="textMenuAbout">О нас</string>
    <string name="textMenuGoods">Товары</string>
    <string name="textMenuRecords">Мои записи</string>
    <string name="title_profile">Меню</string>
    <string name="title_about">О Компании</string>
    <string name="title_order">Онлайн-запись</string>
    <string name="title_records">Мои записи</string>
    <string name="title_goods">Список товаров</string>
    <string name="subTitle">OWN Barbershop на Герцена</string>
    <string name="text_order_btn">Оформить визит</string>
    <string name="text_order_ordermore">+ Записаться еще</string>
    <string name="info_slogan">OWN Barbershop — это больше чем место для мужчины желающего привести себя в порядок, мы хотим чтобы наш гость чувствовал себя как дома, "нашел своих". OWN — это место, где все друг друга уважают, понимают и поддерживают.</string>
    <string name="text_yclients">Работает на YCLIENTS</string>
    <string name="text_feedback">Оставить отзыв</string>
    <string name="text1_togglebtn_records">Предстоящие</string>
    <string name="text2_togglebtn_records">Прошедшие  </string>
    <string name="text_future_records_warning">У вас нет предстоящих сеансов</string>
    <string name="text_past_records_warning">У вас нет прошедших сеансов</string>
    <string name="title_listService">Выбор услуг</string>
    <string name="lorem_test">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</string>
    <string name="title_service_item">Наименование услуги</string>
    <string name="title_price_item">800–1600</string>
    <string name="text_btn_error">Обновить</string>
    <string name="text_error_onErrorFragment">Здесь будет текст ошибки</string>
    <string name="text_totalcount_service">Выбрано()</string>
    <string name="text_btn_continue_listService">Продолжить</string>
    <string name="text_service_OrderFragment">Услуги</string>
    <string name="text_error_network">Нет соединения. \n Проверьте подключение к интернету и попробуйте еще раз</string>
    <string name="text_staff_OrderFragment">Сотрудник</string>
    <string name="text_time_OrderFragment">Дата и время</string>
    <string name="text_detail_Staff_fragment">Информация</string>
    <string name="text_chose_date_session">Выбор даты сеанса</string>
    <string name="title_auth">Авторизация</string>
    <string name="error_requared_field">Пожалуйста заполните обязательные поля</string>
    <string name="text_profile_cards_loyality">Карты лояльности</string>
    <string name="text_profile_subscription">Абонименты</string>
    <string name="text_certificate_profile">Сертификаты</string>
    <string name="text_profile_exit_btn">Выйти</string>
    <string name="text_person_name">Имя</string>
    <string name="text_person_phone">Телефон</string>
    <string name="text_person_email">Email</string>
    <string name="title_personInfo">Личные данные</string>
    <string name="text_person_save_btn">Сохранить</string>
    <string name="text_not_data_card_loyalty">У Вас нет карт лояльности</string>
    <string name="text_not_data_certificate">У вас нет сертификатов</string>
    <string name="text_not_data_subscription">У Вас нет абониментов</string>
    <string name="title_certificate">Сертификаты</string>
    <string name="title_card_loyalty">Карты лояльности</string>
    <string name="title_subscription">Абонементы</string>
    <string name="text_is_frozen_subscription">Заморозка и период заморозки</string>
    <string name="text_first_title_subscription">Абонемент</string>
    <string name="text_nimber_subscription">номер: 67859478</string>
    <string name="text_subscription_frozen">Абонемент заморожен</string>
    <string name="text_subscription_not_freeze">Действует</string>
    <string name="text_period_availability">\"Период действия \"</string>
    <string name="text_error_try_create_order">Возможность Записи на это время отсутствует</string>
    <string name="text_ok_create_order">Вы успешно записаны</string>
</resources>


