<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/orderFragment"
        android:title="@string/textMenuOrder"
        android:icon="@drawable/ic_baseline_order_add_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/textMenuProfile"
        android:icon="@drawable/ic_baseline_person_24"/>
    <item
        android:id="@+id/aboutFragment"
        android:title="@string/textMenuAbout"
        android:icon="@drawable/ic_baseline_info_24"/>
    <item
        android:id="@+id/recordsFragment"
        android:title="@string/textMenuRecords"
        android:icon="@drawable/ic_baseline_list_records_24"/>

    <item
        android:id="@+id/goodsFragment"
        android:title="@string/textMenuGoods"
        android:icon="@drawable/ic_baseline_list_goods_24"/>

</menu>