<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/barberPrimary"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/subTitle"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_subTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/id_staff"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitle">

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/id_stuff_icon"
                        android:layout_width="@dimen/width_icon_order"
                        android:layout_height="@dimen/height_icon_order"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="35dp"
                        android:src="@drawable/ic_baseline_groups_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/id_order_text_stuff"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/text_staff_OrderFragment"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/id_stuff_icon_delete"
                        app:layout_constraintStart_toEndOf="@id/id_stuff_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/id_order_list_text_staff"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/id_stuff_icon_delete"
                        app:layout_constraintStart_toEndOf="@id/id_stuff_icon"
                        app:layout_constraintTop_toBottomOf="@id/id_order_text_stuff"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/id_stuff_icon_delete"
                        android:layout_width="@dimen/width_icon_order"
                        android:layout_height="@dimen/height_icon_order"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="35dp"
                        android:src="@drawable/ic_baseline_delete_outline_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_service"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_staff">

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/id_service_icon"
                        android:layout_width="@dimen/width_icon_order"
                        android:layout_height="@dimen/height_icon_order"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="35dp"
                        android:src="@drawable/ic_baseline_check_circle_outline_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/id_order_text_service"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/text_service_OrderFragment"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@id/id_order_list_text_service"
                        app:layout_constraintEnd_toStartOf="@id/id_service_icon_delete"
                        app:layout_constraintStart_toEndOf="@id/id_service_icon"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/id_order_list_text_service"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/id_service_icon_delete"
                        app:layout_constraintStart_toEndOf="@id/id_service_icon"
                        app:layout_constraintTop_toBottomOf="@id/id_order_text_service"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/id_service_icon_delete"
                        android:layout_width="@dimen/width_icon_order"
                        android:layout_height="@dimen/height_icon_order"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="35dp"
                        android:src="@drawable/ic_baseline_delete_outline_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_time"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_service">

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/id_time_icon"
                        android:layout_width="@dimen/width_icon_order"
                        android:layout_height="@dimen/height_icon_order"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="35dp"
                        android:src="@drawable/ic_baseline_calendar_today_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/id_order_text_time"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/text_time_OrderFragment"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/id_time_icon_delete"
                        app:layout_constraintStart_toEndOf="@id/id_time_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/id_time_icon_delete"
                        android:layout_width="@dimen/width_icon_order"
                        android:layout_height="@dimen/height_icon_order"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="35dp"
                        android:src="@drawable/ic_baseline_delete_outline_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/id_order_ordermore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:gravity="center_horizontal"
                android:text="@string/text_order_ordermore"
                android:textColor="@color/barberPrimaryVariant1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/id_order_visit_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_time" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_order_visit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_order_btn"
                style="@style/MyBaseStyleButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_order_ordermore" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>